Fixes firefox print multi page and chrome print spacing issues

--- a/src/web/themes/custom/workbc/css/print.css
+++ b/src/web/themes/custom/workbc/css/print.css
@@ -3,12 +3,11 @@ body {
   background-color: transparent !important;
   box-shadow: none !important;
   text-shadow: none !important;
+  overflow: visible !important;    /* For WR-1060 */
 }
 
-.page-container {
-  width: 100%;
-  margin: 0;
-  float: none;
+img{
+  max-width: 50% !important;
 }
 
 h1 {
@@ -95,13 +94,54 @@ li {
   line-height: 1.6em;
 }
 
-/* Hide Elements not needed for Printing */
+.hero-image-wrapper img{
+  max-width: 100% !important;
+}
+.workbc-card .workbc-card-container .workbc-card-image-preview, .workbc-card .workbc-card-container, .workbc-card .workbc-card-container .workbc-card-content {
+  padding: 0px !important;
+  display: block !important;
+}
+.workbc-card{
+  margin:0px 20px!important;
+  padding-top:20px !important;
+}
+.workbc-card .workbc-card-container{
+  margin-top:20px !important;
+  padding:20px !important;
+}
+.workbc-card .workbc-card-container .workbc-card-image-preview img{
+  max-width: 60% !important;
+}
+.workbc-card-columns {
+  display: block  !important;
+  column-gap: 20px  !important;
+  margin-bottom: 20px  !important;
+}
+.workbc-card .workbc-card-container .workbc-card-details{
+  padding:10px 0px !important;
+}
+.workbc-card .workbc-card-container .workbc-card-content{
+  padding:0px !important;
+}
+.workbc-card-columns .workbc-card{
+  page-break-inside: avoid;
+  page-break-before: auto;
+}
+.page-container {
+  width: 100%;
+  margin: 0;
+  float: none;
+}
 
+/* Hide Elements which are not needed for printing */
 .sitewide-alert,
 .header,
 .mm-menu,
 .breadcrumb-wrapper,
 .block-related-topics-block,
-.footer {
+.footer,
+.nav-tabs-items,
+.view-footer .btn-primary,
+.back-to-top {
   display: none !important;
 }
